Add TopItems and update docs
