# docs/swagger.json
@@ -1,8 +1,21 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is a sample swagger for Fiber",
+        "title": "Fiber Example API",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "email": "fiber@swagger.io"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
+    "host": "localhost:3000",
+    "basePath": "/",
     "paths": {
         "/": {
             "get": {
@@ -17,26 +30,6 @@
                     "root"
                 ],
                 "summary": "Render an index.html page",
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/api": {
-            "get": {
-                "description": "GET api.spotify.com/v1/me/player/currently-playing\nResponds with",
-                "consumes": [
-                    "*/*"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "spotify"
-                ],
-                "summary": "Get Currently playing track from Spotify",
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -98,9 +91,29 @@
                 }
             }
         },
+        "/api/spotify/currently-playing": {
+            "get": {
+                "description": "GET https://api.spotify.com/v1/me/player/currently-playing\n* For currently playing music tracks, this endpoint responds in JSON with a currently playing `Track` as `item`.\n* For currently playing podcasts, this endpoint responds in JSON with `{ \"is_playing\": \"true, \"item\", nil, \"currently_playing_type\": \"episode\" }`. Spotify's API doesn't provide any episode data.\n* When not currently listening, this endpoint responds in JSON with `{ \"is_playing\": false, \"item\": nil }`.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "spotify"
+                ],
+                "summary": "Get Currently playing track from Spotify",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/api/spotify/recently-played": {
             "get": {
-                "description": "GET api.spotify.com/v1/me/player/recently-played. Sends back array of tracks",
+                "description": "GET api.spotify.com/v1/me/player/recently-played. Sends back array of tracks.",
                 "consumes": [
                     "*/*"
                 ],
@@ -111,6 +124,41 @@
                     "spotify"
                 ],
                 "summary": "Get recently played tracks by user from Spotify Web API",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/spotify/top/{type}": {
+            "get": {
+                "description": "GET https://api.spotify.com/v1/me/top/:type.\n* Responds with `items` in JSON representing a list of artists or tracks.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "spotify"
+                ],
+                "summary": "Get top items by type (artists or tracks)",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Type of item to get, either `artists` or `tracks`",
+                        "name": "type",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Time range to query for top items, either `short_term`, `medium_term`, or `long_term` (default: `medium_term`)",
+                        "name": "time_range",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
